# kinematic_soft_terrain_simulator

./: CMakeLists.txt  package.xml
Diff_Sim/: README.md
Diff_Sim/launch/: ground_truth_server.launch.py
Diff_Sim/maps/: ames_full.csv  ames_square.csv  iros_0.csv  iros_1.csv  maze.csv  room.csv  room2.csv
Diff_Sim/scripts/: rbf_visualization.py  spatial_measurement_publisher.py
Diff_Sim/src/: ground_truth_server.cpp
launch/: rbf_demo.launch.py  server_with_spatial_publisher.launch.py
maps/: ames_left.csv  ames_right.csv  ames_square.csv  grid.csv  maze.csv  room_1.csv  zero.csv
scripts/: drive_sim  spatial_measurement_publisher.py
src/: ground_truth_server.cpp
trusses_chrono_sim/: .gitignore  CMakeLists.txt  README.md  package.xml
trusses_chrono_sim/URDF_files/: rhex.urdf  rover.urdf  rover_0.urdf  rover_1.urdf  rover_1_truss.urdf  rover_1_truss_0.urdf  rover_1_truss_1.urdf  rover_2_truss.urdf  rover_2_truss_0.urdf  rover_2_truss_1.urdf  spirit.urdf  spirit_0.urdf  spirit_1.urdf  spirit_1_truss.urdf  spirit_1_truss_0.urdf  spirit_2_truss.urdf  spirit_3_truss.urdf  test.py
trusses_chrono_sim/include/sim_tools/: GroundStiffness.h  HuskyFactory.h  KDTree.h  PIDController.h  Probe.h  RHex.h  RHexFactory.h  ROSRHex.h  ROSRover.h  ROSSpirit.h  Rover.h  RoverFactory.h  SetpointController.h  SimpleMovingAverage.h  Spirit.h  SpiritFactory.h  Truss.h  VariableSoilParams.h
trusses_chrono_sim/meshes/: RHex_leg.stl  Rover_body.stl  Rover_wheel.stl  Spirit_leg.stl  truss_mount.stl
trusses_chrono_sim/output_frames/: create_video.sh
trusses_chrono_sim/probe_output/: plot_output.py
trusses_chrono_sim/scripts/: Georgia.csv  StiffnessMap.py  constant_stiffness_1000.csv  constant_stiffness_1500.csv  constant_stiffness_2000.csv  constant_stiffness_50.csv  exp1_fail_at_yellow_output_data.csv  exp2_fail_at_red_output_data.csv  exp3_success_safe_output_data.csv  generate_graphs.py  heatmap.py  make_video.py  map.csv  output_stiffness.csv  rhex_results.csv  simple_success_output_data.csv  stiffness_map_output.csv  terrain.csv  terrain_stiffness_map_output.csv
trusses_chrono_sim/scripts/soil_calib_scripts/: Analyze.py  BulkAnalysis.py  CSVAnalysis.py  ChronoAnalyzer.py  GB_V0565_1_Tue_Jan_30_11_14_09_2024.csv  GB_V0565_2_Tue_Jan_30_11_19_52_2024.csv  GB_V0565_3_Tue_Jan_30_11_25_43_2024.csv  GB_V0565_4_Tue_Jan_30_11_30_46_2024.csv  GB_V0625_1_Mon_Feb_19_19_58_21_2024.csv  GB_V0625_2_Mon_Feb_19_20_00_23_2024.csv  GB_V0625new_1_Thu_Feb_22_16_41_23_2024.csv  GB_V0625new_2_Thu_Feb_22_16_42_53_2024.csv  read_real.py  test_other.py
trusses_chrono_sim/scripts/tests_to_run/: exp1_fail_at_yellow.csv  exp2_fail_at_red.csv  exp3_success_safe.csv
trusses_chrono_sim/src/: testtexture
trusses_chrono_sim/src/active_development/: hero_video.cpp  husky_test.cpp  probe_test.cpp  rhex_soil_stiffness.cpp  rhex_soil_stiffness_ames.cpp  rhex_soil_stiffness_path_planning.cpp  rhex_soil_stiffness_path_planning_ros2.cpp  rhex_soil_stiffness_path_planning_shipeng.cpp  rhex_test.cpp  rover_test.cpp  shear_test.cpp  spirit_experiment.cpp  spirit_experiment_probe.cpp  spirit_grab_values.cpp  visual_params.cpp  visual_test.cpp
trusses_chrono_sim/src/examples/: rover_example.cpp  spirit_example.cpp  variable_stiffness_example.cpp
trusses_chrono_sim/src/experiments/: 1spirit_1truss_planner.cpp  1spirit_2truss_model_verification.cpp  1spirit_2truss_planner.cpp  1spirit_3truss_planner.cpp  2spirit_5truss_planner.cpp  3spirit_2truss_planner.cpp  3spirit_3truss_model_verification.cpp  3spirit_3truss_planner.cpp  4spirit_3truss_planner.cpp  spirit_3truss.cpp  spirit_calibration.cpp  spirit_calibration_zero_grav.cpp  spirit_force_calibration.cpp  spirit_force_calibration_stepped_model_verification.cpp  spirit_test.cpp
trusses_chrono_sim/src/sim_tools/: HuskyFactory.cpp  KDTree.cpp  PIDController.cpp  Probe.cpp  RHex.cpp  RHexFactory.cpp  ROSRHex.cpp  ROSRover.cpp  ROSSpirit.cpp  Rover.cpp  RoverFactory.cpp  Spirit.cpp  SpiritFactory.cpp  Truss.cpp  VariableSoilParams.cpp
